--- a/assignment/2.html
+++ b/assignment/2.html
@@ -38,7 +38,7 @@
       <div id="sub-nav">
         <ul>
           <li><a href="1.html">#1 Lost & Found</a></li>
-          <li><a href="2.html">#2 Divination Machine</a></li>
+          <li><a href="2.html">#2 Form Generator</a></li>
           <li><a href="3.html">#3 Experimental Clock</a></li>
           <li><a href="4.html">#4 Exquisite Corpse</a></li>
           <li><a href="5.html">#5 Anti-Surveillance Tool</a></li>
@@ -51,10 +51,159 @@
       </div>
       <div id="main-panel">
         <h1>
-          Coming Soon
+          Form Generator
         </h1>
 
-        
+        <h1>
+          Objective
+        </h1>
+        <p>
+          Build a simple generator that makes multiple variations of the same
+          form.
+        </p>
+
+        <h1>
+          Description
+        </h1>
+        <p>
+          In
+          <a href="http://formandcode.com/code-examples/parameterize-chair"
+            >parameterized design</a
+          >, you are a conductor rather than an individual musician. Instead of
+          producing a single design where you have to draw out all the details
+          step by step, you are using code to create a set of parameters that
+          generate a variety of results. <br /><br />
+          For Assignment 2, you will explore the possibility of a form through
+          its parameters. Then you will create a simple generator that will
+          create multiple variations of the form through mouse or keyboard
+          interactions.
+          <br /><br />
+          This is an individual assignment. You are welcome to ideate and
+          brainstorm with your peers, but the work you submit should be your
+          own.
+        </p>
+
+        <h1>
+          Design Constraint
+        </h1>
+
+        <p>Canvas Size: 400 x 400px</p>
+
+        <h1>
+          Timeline
+        </h1>
+        <h2>
+          Part 1 : Due 9/10
+        </h2>
+        <ol>
+          <li>
+            Begin by choosing a form that can be parameterized — it can be a
+            representational form such as a face, a plant, or a piece of
+            furniture. Or it can be an abstract form that has the ability to
+            shapeshift and transform.
+          </li>
+          <li>
+            Create two drawings on this
+            <a
+              href="https://cdn.glitch.com/e65c6bfb-f5bf-4ddf-a967-53a0e911a960%2Fwk2_asset.jpg?v=1599548178631"
+              >400 * 400 px grid template</a
+            >. You can use Photoshop, Preview, or any computer drawing software
+            of your choice to create your mockups. Alternatively you can also
+            draw on a piece of paper if that's preferred. The first drawing
+            should depict the form at its maximum scale, and the second drawing
+            should depict the form at its minimum scale. Once you have an idea
+            of how your form would look like at its maximum / minimum scale, you
+            should be able to use the range in between to create variations of
+            the form. Here's an
+            <a href="https://editor.p5js.org/nicky.jpg/embed/wOwZ4mUPp"
+              >example</a
+            >
+            by Nicky Du.
+          </li>
+        </ol>
+
+        <h2>
+          Part 2: Due 9/15
+        </h2>
+
+        <ol>
+          <li>
+            Transfer your drawings into the p5 sketch. Plug the maximum /
+            minimum values into random() for each of the attributes.
+          </li>
+          <li>
+            Make sure that you include the following technical components in
+            your sketch:
+            <ul>
+              <li>User-defined variables</li>
+              <li>random()</li>
+              <li>mousePressed() or keyPressed()</li>
+            </ul>
+          </li>
+
+          <li>
+            Closely observe how the attributes relate to one another in every
+            variation, and refine the parameters until every variation feels
+            intentional.
+          </li>
+
+          <li>
+            On your CC portfolio page, please reflect upon the following:
+            <ul>
+              <li class="bullet">
+                Describe your design process. And include your design sketches.
+              </li>
+              <li class="bullet">
+                What have you discovered about the form you've chosen through
+                this assignment?
+              </li>
+            </ul>
+          </li>
+        </ol>
+
+        <h1>
+          Submission Guidelines
+        </h1>
+        <p>
+          Please submit your sketch to two places:
+        </p>
+        <ol>
+          <li>Submit the sketch to the CC Lab class Canvas Assignment 2</li>
+          <li>Add the sketch to your CC portfolio</li>
+        </ol>
+
+        <h1>
+          Tutorials
+        </h1>
+
+        <ul>
+          <li>
+            2.1 Data types, mouseX, mouseY (<a
+              href="https://youtu.be/HoVTngxKNZI"
+              target="_blank"
+              >YouTube</a
+            >), Katherine
+          </li>
+          <li>
+            2.2 User defined variables (<a
+              href="https://youtu.be/BxNqiSjy_aA"
+              target="_blank"
+              >YouTube</a
+            >), Katherine
+          </li>
+          <li>
+            2.3 text() (<a href="https://youtu.be/VuSBKbxsRFs" target="_blank"
+              >YouTube</a
+            >), Katherine
+          </li>
+          <li>
+            2.4 random(), mousePressed(), keyPressed() (<a
+              href="https://youtu.be/ZCs5xNGF9Ok"
+              target="_blank"
+              >YouTube</a
+            >), Katherine
+          </li>
+        </ul>
       </div>
     </div>
   </body>
