--- a/assignment/3.html
+++ b/assignment/3.html
@@ -38,7 +38,7 @@
       <div id="sub-nav">
         <ul>
           <li><a href="1.html">#1 Lost & Found</a></li>
-          <li><a href="2.html">#2 Divination Machine</a></li>
+          <li><a href="2.html">#2 Form Generator</a></li>
           <li><a href="3.html">#3 Experimental Clock</a></li>
           <li><a href="4.html">#4 Exquisite Corpse</a></li>
           <li><a href="5.html">#5 Anti-Surveillance Tool</a></li>
@@ -50,9 +50,122 @@
         </ul>
       </div>
       <div id="main-panel">
-        <h1>
-          Coming Soon
+       <h1>
+          Experimental Clock
         </h1>
+
+        <h1>
+          Objective
+        </h1>
+        <p>
+          Design and code an experimental clock that expresses a novel way of tracking time. 
+        </p>
+
+        <h1>
+          Description
+        </h1>
+        <p>
+          Conventional clocks mark seconds, minutes, and hours according to a 24 hour cycle. This segmented, discrete, and regimented approach to parsing time is not universal in terms of capturing and measuring of experience. In this assignment you are tasked with developing an experimental clock. This clock can function in ways that ordinary clocks cannot. In order to complete this assignment you are invited to think of time expansively and alternatively, moving beyond conventional time keeping units. What are other ways in which you can mark the passage of time? What if time itself were turned on its head, driven not by standard time-keeping units, but perhaps subjective, personal, or even irrational organization? 
+
+          <br /><br />
+          This is an individual assignment. You are welcome to ideate and
+          brainstorm with your peers, but the work you submit should be your
+          own.
+        </p>
+
+        <h1>
+          Design Constraint
+        </h1>
+
+        <p>Canvas Size: 600 x 600px</p>
+
+        <h1>
+          Timeline
+        </h1>
+        <h2>
+          Part 1 : Due 9/17
+        </h2>
+        <ol>
+          <li>
+            Begin with ideation and brainstorm 3 different ways of tracking time. Consider the conditions under which “time” moves forward for your clock.
+          </li>
+          <li>
+            Create 3 design sketches accommodated by pseudocode that incorporates:
+            <ul>
+              <li>IF / ELSE Statement</li>
+              <li>millis(), OR second() / minute() / hour()</li>
+              <li>You’re also encouraged to integrate map() or the boolean variable when appropriate</li>
+            </ul>
+          </li>
+        </ol>
+
+        <h2>
+          Part 2: Due 9/22
+        </h2>
+
+        <ol>
+          <li>
+          You will present your sketches in Lab, then you will move forward with one idea after discussing with your CC faculty and peers. Update your pseudocode as needed. 
+          </li>
+          <li>
+            Transfer your sketch and pseudocode into the p5 sketch. Test your clock over “time” and make sure that it looks intentional in every single stage. 
+   
+          </li>
+
+          <li>
+           On your CC portfolio page, please reflect upon the following:
+            <ul>
+              <li>Write a description for your experimental clock. How is it novel to you and how might it alter the way you track / keep time? </li>
+              <li>Describe your design process. Include all three of your design sketches and explain how you’ve ended up choosing one. </li>
+              <li>What’s your overall reflection on this assignment? What have you learned throughout the process of designing an unconventional clock?</li>
+            </ul>
+          </li>
+
+        </ol>
+
+        <h1>
+          Submission Guidelines
+        </h1>
+        <p>
+          Please submit your sketch to two places:
+        </p>
+        <ol>
+          <li>Submit the sketch to the CC Lab class Canvas Assignment 3</li>
+          <li>Add the sketch to your CC portfolio</li>
+        </ol>
+
+<!--         <h1>
+          Tutorials
+        </h1>
+
+        <ul>
+          <li>
+            2.1 Data types, mouseX, mouseY (<a
+              href="https://youtu.be/HoVTngxKNZI"
+              target="_blank"
+              >YouTube</a
+            >), Katherine
+          </li>
+          <li>
+            2.2 User defined variables (<a
+              href="https://youtu.be/BxNqiSjy_aA"
+              target="_blank"
+              >YouTube</a
+            >), Katherine
+          </li>
+          <li>
+            2.3 text() (<a href="https://youtu.be/VuSBKbxsRFs" target="_blank"
+              >YouTube</a
+            >), Katherine
+          </li>
+          <li>
+            2.4 random(), mousePressed(), keyPressed() (<a
+              href="https://youtu.be/ZCs5xNGF9Ok"
+              target="_blank"
+              >YouTube</a
+            >), Katherine
+          </li>
+        </ul> -->
 
         
       </div>
