--- a/index.html
+++ b/index.html
@@ -43,15 +43,10 @@
           <div class="splash">
             This Week: <br /><br />
             <a
-              href="https://www.youtube.com/watch?v=en3cfTX0jBw&feature=youtu.be"
+              href="https://youtu.be/qdwrtFmsn-k"
               target="_blank"
-              >Is Technology Neutral?</a
+              >Variables, Parameters, Randomness</a
             >
-            <br /><br /><a
-              href=" https://www.youtube.com/watch?v=Ny1Tu0oqF2k&feature=youtu.be"
-              target="_blank"
-              >What is Code? Why Code?
-            </a>
           </div>
         </div>
       </div>
