--- a/people/index.html
+++ b/people/index.html
@@ -50,9 +50,22 @@
           </h1>
         </div>
         <ul class="bullet people">
-          <li><a href="addPortfolioLink">Student Name, Pronouns</a></li>
-          <li><a href="addPortfolioLink">Student Name, Pronouns</a></li>
-          <li><a href="addPortfolioLink">Student Name, Pronouns</a></li>
+          <li><a href="https://cc-lab-jay-tobin.glitch.me/">Jay Tobin, he/him</a></li>
+          <li><a href="https://buttoned-rainy-wren.glitch.me/">Jingjing Sun, she/her</a></li>
+          <li><a href="https://yoonjinbae.glitch.me/">YoonJin Bae, she/her</a></li>
+          <li><a href="https://thankful-halved-rook.glitch.me/">Yufei Wang, any pronouns</a></li>
+          <li><a href="https://cclab-mmara.glitch.me/">Michael Mara, he/him</a></li>
+          <li><a href="https://cclab-portfolio-hmoon.glitch.me/">Heli Moon, she/her</a></li>
+          <li><a href="https://reflective-intriguing-termite.glitch.me/">Jiujin Feng, he/him</a></li>
+          <li><a href="https://cc-lab-portfolio-by-g.glitch.me/">Jiyeon Choi, she/her</a></li>
+          <li><a href="https://cclab-portfolio-nickd.glitch.me/">Nick D'Angelo, he/him</a></li>
+          <li><a href="https://cclab-portfolio-lia.glitch.me/">Yuqing Liang, she/her</a></li>
+          <li><a href="https://cc-portfolio-1.glitch.me/">Brittany Price, she/her</a></li>
+          <li><a href="https://cclab-portfolio-ishraq.glitch.me/">Ishraq Ashtarian, he/him</a></li>
+          <li><a href="https://cclab-portfolio-xuy.glitch.me/">Yiwen Xu, she/her</a></li>
+          <li><a href="addPortfolioLink"> Jingwen Zhang, she/her</a></li>
+          <li><a href="addPortfolioLink">Chenwei Xhu, she/her</a></li>
+          <li><a href="addPortfolioLink">Zhehui Chen, he/him</a></li>
         </ul>
 
         <div class="block" id="section1">
@@ -61,9 +74,24 @@
           </h1>
         </div>
         <ul class="bullet people">
-          <li><a href="addPortfolioLink">Student Name, Pronouns</a></li>
-          <li><a href="addPortfolioLink">Student Name, Pronouns</a></li>
-          <li><a href="addPortfolioLink">Student Name, Pronouns</a></li>
+          <li><a href="addPortfolioLink">Zai Aliyu, she/her</a></li>
+          <li><a href="addPortfolioLink">Austin Bailey, he/him</a></li>
+          <li><a href="addPortfolioLink">ZiJia Chen, he/him</a></li>
+          <li><a href="addPortfolioLink">Grace Guo, she/her</a></li>
+          <li><a href="addPortfolioLink">Linh Le, she/her</a></li>
+          <li><a href="addPortfolioLink">Bowen Li, he/him</a></li>
+          <li><a href="addPortfolioLink">Simone Liu, she/her</a></li>
+          <li><a href="addPortfolioLink">Senyan Luo, she/her</a></li>
+          <li><a href="addPortfolioLink">Malik Pierre-Davis, he/him</a></li>
+          <li><a href="addPortfolioLink">Zhijun Song, she/her</a></li>
+          <li><a href="addPortfolioLink">Jackie Xia, she/her</a></li>
+          <li><a href="addPortfolioLink">Junru(Angelina) Xu, she/her</a></li>
+          <li><a href="addPortfolioLink">Angel Fan, she/her</a></li>
+          <li><a href="addPortfolioLink">Z Ji, she/her</a></li>
+          <li><a href="addPortfolioLink">Ori Aum, he/him</a></li>
+          <li><a href="addPortfolioLink">Vicky Chi, she/her</a></li>
+          <li><a href="addPortfolioLink">Gabe Deko, he/him</a></li>
+          <li><a href="addPortfolioLink">Han Lu, she/her</a></li>
         </ul>
         `
         <div class="block" id="section2">
@@ -83,9 +111,23 @@
           </h1>
         </div>
         <ul class="bullet people">
-          <li><a href="addPortfolioLink">Student Name, Pronouns</a></li>
-          <li><a href="addPortfolioLink">Student Name, Pronouns</a></li>
-          <li><a href="addPortfolioLink">Student Name, Pronouns</a></li>
+          <li><a href="addPortfolioLink">Ziyan Cai, she/her</a></li>
+          <li><a href="https://norio-cclab.glitch.me/">Norio Chan, he/him</a></li>
+          <li><a href="https://cc-lab-scarlett.glitch.me/">Yufei(Scarlett) Chen, she/her</a></li>
+          <li><a href="https://cclab-jessiechenzy.glitch.me/">Zhiyue(Jessie) Chen, she/her</a></li>
+          <li><a href="https://cc-lab-k.glitch.me/">Meng(Kay) Deng, she/her</a></li>
+          <li><a href="addPortfolioLink">Angel Fan, she/her</a></li>
+          <li><a href="addPortfolioLink">Yibo(Bob) Fu, he/him</a></li>
+          <li><a href="https://cclab-portfolio-momogao.glitch.me/">Yumeng(Momo) Gao, she/her</a></li>
+          <li><a href="https://universal-fast-porpoise.glitch.me/">Lu Jia, she/her</a></li>
+          <li><a href="https://cc-lab-minghuiju-portfo.glitch.me/">Minghui(Jason) Ju</a></li>
+          <li><a href="https://cclab-portfolio-ankong.glitch.me/">An Kong, she/her</a></li>
+          <li><a href="https://cclab-portfolio-alienq88.glitch.me/">Wenwen(Erin) Qiu, she/her</a></li>
+          <li><a href="https://cc-portfolio-nishra.glitch.me/">Nishra Ranpura, she/her</a></li>
+          <li><a href="https://cclab-sarita.glitch.me/">Yingying(Sarita) Sun, she/her</a></li>
+          <li><a href="addPortfolioLink">Qiao(Kyle) Xiao, he/him</a></li>
+          <li><a href="http://cclab-portfolio-haoshu.glitch.me/p1.html">Haoshu Yang, he/him</a></li>
+          
         </ul>
 
         <div class="block" id="section4">
@@ -94,9 +136,20 @@
           </h1>
         </div>
         <ul class="bullet people">
-          <li><a href="addPortfolioLink">Student Name, Pronouns</a></li>
-          <li><a href="addPortfolioLink">Student Name, Pronouns</a></li>
-          <li><a href="addPortfolioLink">Student Name, Pronouns</a></li>
+          <li><a href="https://cclab-portfolio-edc.glitch.me/">Baixing (Eddie) Chen, he/him</a></li>
+          <li><a href="https://cclab-portfolio-2020-joshua.glitch.me/">Joshua Davison, he/him</a></li>
+          <li><a href="https://cclab-portfolio-jiayue.glitch.me/">Jiayue Gou, she/her</a></li>
+          <li><a href="https://jessica-jabr-cclab-portfolio.glitch.me/">Jessica Jabre, she/her</a></li> 
+          <li><a href="https://cclab-port-mang.glitch.me/">Khuplunmang (Mang) Kipgen, he/him</a></li>
+          <li><a href="https://cclab-portfolio-bihanli.glitch.me/">Bihan Li, she/her</a></li>
+          <li><a href="https://cclab-portfolio-jasminl.glitch.me/">Jiamin (Jasmin) Liang, she/her</a></li>
+          <li><a href="https://cclab-portfolio-whitt.glitch.me/">William (Whitt) Sellers, he/him</a></li>
+          <li><a href="https://cclab-portfolio-sheethal.glitch.me/">Sheethal Shobowale, she/her</a></li>
+          <li><a href="https://cclab-portfolio-crystaltan.glitch.me/">Xintong (Crystal) Tan, she/her</a></li>
+          <li><a href="https://cc-lab-shivanjali.glitch.me/">Shivanjali Verma, she/her</a></li>
+          <li><a href="https://cclab-portfolio-leah.glitch.me/">Xiaotong (Leah) Wang, she/her</a></li>
+          <li><a href="https://cclab-portfolio-winnie.glitch.me/">Yuxiang (Winnie) Zhai, she/her</a></li>
+          <li><a href="https://cclab-portfolio-sandy.glitch.me/">Yiwen (Sandy) Zhang, she/her</a></li>
         </ul>
         `
       </div>
