--- a/resource/lectures.html
+++ b/resource/lectures.html
@@ -51,7 +51,7 @@
         </h2>
         <ul class="bullet">
           <li>
-            1.1 Is Technology Neutral? (<a
+            1.1. Is Technology Neutral? (<a
               href="https://youtu.be/en3cfTX0jBw"
               target="blank"
               >YouTube</a
@@ -64,7 +64,7 @@
             >), Katherine Moriwaki & Xin Xin
           </li>
           <li>
-            1.2 What is Code? Why Code? (<a
+            1.2. What is Code? Why Code? (<a
               href="https://youtu.be/Ny1Tu0oqF2k"
               target="blank"
               >YouTube</a
@@ -74,6 +74,19 @@
               href="https://diode.zone/videos/watch/53e5c662-fc68-4be6-a5a0-4f7b7cdbfc54"
               target="blank"
               >PeerTube</a
+            >), Katherine Moriwaki & Xin Xin
+          </li>
+        </ul>
+        
+                <h2>
+          Wk 2
+        </h2>
+        <ul class="bullet">
+          <li>
+            2. Variables, Parameters, and Randomness (<a
+              href="https://youtu.be/qdwrtFmsn-k"
+              target="blank"
+              >YouTube</a
             >), Katherine Moriwaki & Xin Xin
           </li>
         </ul>
