--- a/resource/tutorials.html
+++ b/resource/tutorials.html
@@ -110,6 +110,41 @@
             >), aarati akkapeddi
           </li>
         </ul>
+         <ul>
+           
+          <h2>
+            Wk 2
+          </h2>
+          <li>
+            2.1 Data types, mouseX, mouseY (<a
+              href="https://youtu.be/HoVTngxKNZI"
+              target="_blank"
+              >YouTube</a
+            >), Katherine
+          </li>
+          <li>
+            2.2 User defined variables (<a
+              href="https://youtu.be/BxNqiSjy_aA"
+              target="_blank"
+              >YouTube</a
+            >), Katherine
+          </li>
+          <li>
+            2.3 text() (<a
+              href="https://youtu.be/VuSBKbxsRFs"
+              target="_blank"
+              >YouTube</a
+            >), Katherine
+          </li>
+          <li>
+            2.4 random(), mousePressed(), keyPressed() (<a
+              href="https://youtu.be/ZCs5xNGF9Ok"
+		target="_blank"
+              >YouTube</a
+            >), Katherine
+          </li>
+        </ul>
+        
 
         <h1>
           External p5 Tutorials
