--- a/assignment/1.html
+++ b/assignment/1.html
@@ -38,7 +38,7 @@
       <div id="sub-nav">
         <ul>
           <li><a href="1.html">#1 Lost & Found</a></li>
-          <li><a href="2.html">#2 Divination Machine</a></li>
+          <li><a href="2.html">#2 Form Generator</a></li>
           <li><a href="3.html">#3 Experimental Clock</a></li>
           <li><a href="4.html">#4 Exquisite Corpse</a></li>
           <li><a href="5.html">#5 Anti-Surveillance Tool</a></li>
@@ -161,8 +161,7 @@
           </li>
 
           <li>
-            Be sure to include the following information at the top of your
-            sketch.js:
+            Be sure to include the following information:
             <ul>
               <li class="bullet">Your p5 sketch (embedded iframe)</li>
               <li class="bullet">Your name</li>
