--- a/assignment/4.html
+++ b/assignment/4.html
@@ -38,7 +38,7 @@
       <div id="sub-nav">
         <ul>
           <li><a href="1.html">#1 Lost & Found</a></li>
-          <li><a href="2.html">#2 Divination Machine</a></li>
+            <li><a href="2.html">#2 Form Generator</a></li>
           <li><a href="3.html">#3 Experimental Clock</a></li>
           <li><a href="4.html">#4 Exquisite Corpse</a></li>
           <li><a href="5.html">#5 Anti-Surveillance Tool</a></li>
