added assignment 4 + links on people page

--- a/faq/index.html
+++ b/faq/index.html
@@ -272,10 +272,11 @@
             </h3>
           </li>
           <li>
-           This is a great question. We understand that this is tricky. Let us put some examples together and get back to you on this.
+           We would like to suggest that you credit as many sources as it is possible. Lauren McCarthy, the creator and former project lead for p5.js said that it is important to "reinforce the idea that all of this work is built on collaboration and sharing open-source tools. It's very different from the individual genius artist in their studio framework of the art world". <br><br> If you're remixing someone else's code outside of the tutorial context, please make sure you don't use code that doesn't have an open-sourced license such as the <a href="https://mit-license.org/">MIT license</a> or the <a href="https://www.gnu.org/">GNU license</a>. And it's best practice that you list their license type in your attribution, e.g. "This project is licensed under a GNU Lesser General Public License v2.1".<br><br>
+            In concrete terms, you can credit your sources <a href="https://editor.p5js.org/xinxin/sketches/zjeoOQO0l">at the top of your source code</a> as well as on your <a href="https://code-portfolio-template.glitch.me/p1.html">portfolio pages</a>. Click on the links to see the examples. 
           </li>
         </ul>
-        
+      
                 <div class="block" id="section7">
           <h1>
           Zoom
