--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
           <div class="splash">
             This Week: <br /><br />
             <a
-              href="https://youtu.be/qdwrtFmsn-k"
+              href="https://www.youtube.com/watch?v=b1ou7ipFO7I&feature=youtu.be"
               target="_blank"
-              >Variables, Parameters, Randomness</a
+              >Modularity, Reusability, Utilitarianism</a
             >
           </div>
         </div>
