--- a/people/index.html
+++ b/people/index.html
@@ -63,9 +63,9 @@
           <li><a href="https://cc-portfolio-1.glitch.me/">Brittany Price, she/her</a></li>
           <li><a href="https://cclab-portfolio-ishraq.glitch.me/">Ishraq Ashtarian, he/him</a></li>
           <li><a href="https://cclab-portfolio-xuy.glitch.me/">Yiwen Xu, she/her</a></li>
-          <li><a href="addPortfolioLink"> Jingwen Zhang, she/her</a></li>
-          <li><a href="addPortfolioLink">Chenwei Xhu, she/her</a></li>
-          <li><a href="addPortfolioLink">Zhehui Chen, he/him</a></li>
+          <li><a href="https://cccode.glitch.me/"> Jingwen Zhang, she/her</a></li>
+          <li><a href="https://cclab-portfolio-chenwei.glitch.me/">Chenwei Xhu, she/her</a></li>
+          <li><a href="https://cclab-portfolio-zhehui.glitch.me/">Zhehui Chen, he/him</a></li>
         </ul>
 
         <div class="block" id="section1">
@@ -74,24 +74,24 @@
           </h1>
         </div>
         <ul class="bullet people">
-          <li><a href="addPortfolioLink">Zai Aliyu, she/her</a></li>
-          <li><a href="addPortfolioLink">Austin Bailey, he/him</a></li>
-          <li><a href="addPortfolioLink">ZiJia Chen, he/him</a></li>
-          <li><a href="addPortfolioLink">Grace Guo, she/her</a></li>
-          <li><a href="addPortfolioLink">Linh Le, she/her</a></li>
-          <li><a href="addPortfolioLink">Bowen Li, he/him</a></li>
-          <li><a href="addPortfolioLink">Simone Liu, she/her</a></li>
-          <li><a href="addPortfolioLink">Senyan Luo, she/her</a></li>
-          <li><a href="addPortfolioLink">Malik Pierre-Davis, he/him</a></li>
-          <li><a href="addPortfolioLink">Zhijun Song, she/her</a></li>
-          <li><a href="addPortfolioLink">Jackie Xia, she/her</a></li>
-          <li><a href="addPortfolioLink">Junru(Angelina) Xu, she/her</a></li>
-          <li><a href="addPortfolioLink">Angel Fan, she/her</a></li>
-          <li><a href="addPortfolioLink">Z Ji, she/her</a></li>
-          <li><a href="addPortfolioLink">Ori Aum, he/him</a></li>
-          <li><a href="addPortfolioLink">Vicky Chi, she/her</a></li>
-          <li><a href="addPortfolioLink">Gabe Deko, he/him</a></li>
-          <li><a href="addPortfolioLink">Han Lu, she/her</a></li>
+          <li><a href="https://zai-cc.glitch.me/">Zai Aliyu, she/her</a></li>
+          <li><a href="https://cclab-portfolio-austin.glitch.me/">Austin Bailey, he/him</a></li>
+          <li><a href="https://cc-portfolio-zijia.glitch.me/">ZiJia Chen, he/him</a></li>
+          <li><a href="https://grace-g-cclab.glitch.me/">Grace Guo, she/her</a></li>
+          <li><a href="https://cclab-portfolio-linhle.glitch.me/">Linh Le, she/her</a></li>
+          <li><a href="https://cclab-portfolio-bowen.glitch.me/">Bowen Li, he/him</a></li>
+          <li><a href="https://honeylocustsimone.glitch.me/">Simone Liu, she/her</a></li>
+          <li><a href="https://cclab-portfolio-senyan.glitch.me/">Senyan Luo, she/her</a></li>
+          <li><a href="https://glitch.com/~jpierredavis-cclab">Malik Pierre-Davis, he/him</a></li>
+          <li><a href="https://cclab-portolio-zhijun.glitch.me/">Zhijun Song, she/her</a></li>
+          <li><a href="https://cclab-portfolio-jackiex.glitch.me/">Jackie Xia, she/her</a></li>
+          <li><a href="https://cclab-portfolio-jxu.glitch.me/">Junru(Angelina) Xu, she/her</a></li>
+          <li><a href="https://asfan-cclab-portfolio.glitch.me/">Angel Fan, she/her</a></li>
+          <li><a href="https://cclab-portfolio-ziweiji.glitch.me/">Z Ji, she/her</a></li>
+          <li><a href="https://cclab-portfolio-ori.glitch.me/">Ori Aum, he/him</a></li>
+          <li><a href="https://cclab-portfolio-huishan.glitch.me/">Vicky Chi, she/her</a></li>
+          <li><a href="https://cclab-portfolio-gabe.glitch.me/">Gabe Deko, he/him</a></li>
+          <li><a href="https://cclab-portfolio-guihan.glitch.me/">Han Lu, she/her</a></li>
         </ul>
         `
         <div class="block" id="section2">
@@ -100,9 +100,25 @@
           </h1>
         </div>
         <ul class="bullet people">
-          <li><a href="addPortfolioLink">Student Name, Pronouns</a></li>
-          <li><a href="addPortfolioLink">Student Name, Pronouns</a></li>
-          <li><a href="addPortfolioLink">Student Name, Pronouns</a></li>
+          <li><a href="https://minhanh0604.glitch.me/">Anh Nguyen, she/her</a></li>
+          <li><a href="https://cc-lab-portfolio-ardak.glitch.me">Ardak Mukanova, she/her</a></li>
+          <li><a href="https://cc-lab-portfolio-cecile-roca.glitch.me">Cecile Roca Morla, she/her</a></li>
+          <li><a href="https://cclab-pofolio-emilio.glitch.me">Emilio Lari, he/him</a></li>
+          <li><a href="https://gretchen-hollis-cclab.glitch.me">Gretchen Steinbrunner, she/her</a></li>
+          <li><a href="https://cclab-portfolio-ina.glitch.me">Ina Kang, she/her</a></li>
+          <li><a href="https://cclab-portfolio-iz.glitch.me">Iz Nettere, they/them</a></li>
+          <li><a href="https://cclab-portfolio-jbrill.glitch.me">Jason Brill, he/him</a></li>
+          <li><a href="https://cclab-portfolio-jinxin.glitch.me">Jixin (April) Li, she/her</a></li>
+          <li><a href="https://jinyun-cclab.glitch.me">Jinyun Li, she/her</a></li>
+          <li><a href="https://mfadt-cc-olivierbrcknr.glitch.me">Olivier Brückner, he/him</a></li>
+          <li><a href="https://cclab-portfolio-salil.glitch.me">Salil Parekh, he/him</a></li>
+          <li><a href="https://cclab-portfolio-sara.glitch.me">Sara Kobayashi, she/her</a></li>
+          <li><a href="https://cc-lab-portflio-sn.glitch.me">Sarah Nichols, she/her</a></li>
+          <li><a href="https://cc-unnati.glitch.me">Unnati Shukla, she/her</a></li>
+          <li><a href="https://cclab-portfolio-wesley.glitch.me/">Wesley Chau, he/him</a></li>
+          <li><a href="https://cclab-portfolio-wesley.glitch.me/">Xintong Wang, she/her</a></li>
+          <li><a href="https://cclabzhangyuan.glitch.me/">Yuan (Zane) Zhang, he/him</a></li>
+          <li><a href=""></a>Tania Zaidi</li>
         </ul>
 
         <div class="block" id="section3">
@@ -111,13 +127,12 @@
           </h1>
         </div>
         <ul class="bullet people">
-          <li><a href="addPortfolioLink">Ziyan Cai, she/her</a></li>
+          <li><a href="https://cclab-portfolio-ziyan.glitch.me/">Ziyan Cai, she/her</a></li>
           <li><a href="https://norio-cclab.glitch.me/">Norio Chan, he/him</a></li>
           <li><a href="https://cc-lab-scarlett.glitch.me/">Yufei(Scarlett) Chen, she/her</a></li>
           <li><a href="https://cclab-jessiechenzy.glitch.me/">Zhiyue(Jessie) Chen, she/her</a></li>
           <li><a href="https://cc-lab-k.glitch.me/">Meng(Kay) Deng, she/her</a></li>
-          <li><a href="addPortfolioLink">Angel Fan, she/her</a></li>
-          <li><a href="addPortfolioLink">Yibo(Bob) Fu, he/him</a></li>
+          <li><a href="https://cclab-protfolio-yibofu.glitch.me/">Yibo(Bob) Fu, he/him</a></li>
           <li><a href="https://cclab-portfolio-momogao.glitch.me/">Yumeng(Momo) Gao, she/her</a></li>
           <li><a href="https://universal-fast-porpoise.glitch.me/">Lu Jia, she/her</a></li>
           <li><a href="https://cc-lab-minghuiju-portfo.glitch.me/">Minghui(Jason) Ju</a></li>
@@ -125,8 +140,9 @@
           <li><a href="https://cclab-portfolio-alienq88.glitch.me/">Wenwen(Erin) Qiu, she/her</a></li>
           <li><a href="https://cc-portfolio-nishra.glitch.me/">Nishra Ranpura, she/her</a></li>
           <li><a href="https://cclab-sarita.glitch.me/">Yingying(Sarita) Sun, she/her</a></li>
-          <li><a href="addPortfolioLink">Qiao(Kyle) Xiao, he/him</a></li>
+          <li><a href="addPortfolioLink">Qiao(Kyle) Xiao, she/her</a></li>
           <li><a href="http://cclab-portfolio-haoshu.glitch.me/p1.html">Haoshu Yang, he/him</a></li>
+          <li><a href="addPortfolioLink">Yao Xiao, she/her</a></li>
           
         </ul>
 
