--- a/splashscreen.html
+++ b/splashscreen.html
@@ -22,7 +22,7 @@
     <div class="blackBox" style="padding: 500px">
       <div class="splash">
         Critical Computation: <br /><br />
-        Variables, Parameters, Randomness
+        Modularity, Reusability, Utilitarianism
       </div>
     </div>
   </body>
