--- a/syllabus/index.html
+++ b/syllabus/index.html
@@ -96,7 +96,7 @@
           <div class="assignment-grid-item"></div>
           <div class="assignment-grid-item">
             <a
-              href="https://calendly.com/moriwaki/cc-lecture-1-1-meeting?month=2020-09"
+              href="https://calendly.com/moriwaki/cclecture"
               target="blank"
               >Katherine's Calendar</a
             >
