--- a/people/index.html
+++ b/people/index.html
@@ -155,7 +155,7 @@
           <li><a href="https://cclab-portfolio-edc.glitch.me/">Baixing (Eddie) Chen, he/him</a></li>
           <li><a href="https://cclab-portfolio-2020-joshua.glitch.me/">Joshua Davison, he/him</a></li>
           <li><a href="https://cclab-portfolio-jiayue.glitch.me/">Jiayue Gou, she/her</a></li>
-          <li><a href="https://jessica-jabr-cclab-portfolio.glitch.me/">Jessica Jabre, she/her</a></li> 
+          <li><a href="https://jessica-portfolio-cc.glitch.me/">Jessica Jabre, she/her</a></li> 
           <li><a href="https://cclab-port-mang.glitch.me/">Khuplunmang (Mang) Kipgen, he/him</a></li>
           <li><a href="https://cclab-portfolio-bihanli.glitch.me/">Bihan Li, she/her</a></li>
           <li><a href="https://cclab-portfolio-jasminl.glitch.me/">Jiamin (Jasmin) Liang, she/her</a></li>
