--- a/splashscreen.html
+++ b/splashscreen.html
@@ -21,8 +21,11 @@
   <body>
     <div class="blackBox" style="padding: 500px">
       <div class="splash">
+        
+        <br><br>
         Critical Computation: <br /><br />
-        Modularity, Reusability, Utilitarianism
+        Classes, Objects, and Inheritance
+        
       </div>
     </div>
   </body>
