--- a/index.html
+++ b/index.html
@@ -43,9 +43,15 @@
           <div class="splash">
             This Week: <br /><br />
             <a
-              href="https://www.youtube.com/watch?v=b1ou7ipFO7I&feature=youtu.be"
+              href="https://youtu.be/LE_gHj0ZQ7E"
               target="_blank"
-              >Modularity, Reusability, Utilitarianism</a
+              >Classes, Objects, and Inheritance</a
+            > (Content Warning)
+            <br><br>
+            <a
+              href="https://youtu.be/7uyoLJrP68w"
+              target="_blank"
+              >Shirley Leung Guest Lecture</a
             >
           </div>
         </div>
