🏪🍄 updated to assignment 8

--- a/index.html
+++ b/index.html
@@ -43,16 +43,17 @@
           <div class="splash">
             This Week: <br /><br />
             <a
-              href="https://youtu.be/LE_gHj0ZQ7E"
+              href="https://youtu.be/KEeIhb8I34k"
               target="_blank"
-              >Classes, Objects, and Inheritance</a
-            > (Content Warning)
-            <br><br>
-            <a
-              href="https://youtu.be/7uyoLJrP68w"
+              >Consentful Interface</a
+            > 
+             <br /><br />
+                 <a
+              href="https://youtu.be/w7auYHijq1M"
               target="_blank"
-              >Shirley Leung Guest Lecture</a
-            >
+              >Elena Lee Gold</a
+            > 
+            
           </div>
         </div>
       </div>
