--- a/splashscreen.html
+++ b/splashscreen.html
@@ -24,7 +24,7 @@
         
         <br><br>
         Critical Computation: <br /><br />
-        Classes, Objects, and Inheritance
+        Consentful Interface
         
       </div>
     </div>
