🍂⛵️ week 14 lecture added

--- a/index.html
+++ b/index.html
@@ -43,16 +43,15 @@
           <div class="splash">
             This Week: <br /><br />
             <a
-              href="https://youtu.be/KEeIhb8I34k"
+              href="https://www.youtube.com/watch?v=kxULeU-I3fg&feature=youtu.be"
               target="_blank"
-              >Consentful Interface</a
-            > 
+              >Network Choreography</a
+            >
              <br /><br />
-                 <a
-              href="https://youtu.be/w7auYHijq1M"
-              target="_blank"
-              >Elena Lee Gold</a
-            > 
+             <a
+              href="https://youtu.be/1lIiP7aVXuk"
+              >Lan Zhang</a
+            >
             
           </div>
         </div>
