--- a/people/index.html
+++ b/people/index.html
@@ -51,7 +51,7 @@
         </div>
         <ul class="bullet people">
           <li><a href="https://cc-lab-jay-tobin.glitch.me/">Jay Tobin, he/him</a></li>
-          <li><a href="https://buttoned-rainy-wren.glitch.me/">Jingjing Sun, she/her</a></li>
+          <li><a href="https://jingjingsun.glitch.me/">Jingjing Sun, she/her</a></li>
           <li><a href="https://yoonjinbae.glitch.me/">YoonJin Bae, she/her</a></li>
           <li><a href="https://thankful-halved-rook.glitch.me/">Yufei Wang, any pronouns</a></li>
           <li><a href="https://cclab-mmara.glitch.me/">Michael Mara, he/him</a></li>
@@ -82,10 +82,10 @@
           <li><a href="https://cclab-portfolio-bowen.glitch.me/">Bowen Li, he/him</a></li>
           <li><a href="https://honeylocustsimone.glitch.me/">Simone Liu, she/her</a></li>
           <li><a href="https://cclab-portfolio-senyan.glitch.me/">Senyan Luo, she/her</a></li>
-          <li><a href="https://glitch.com/~jpierredavis-cclab">Malik Pierre-Davis, he/him</a></li>
+          <li><a href="https://jpierredavis-cclab.glitch.me/p1.html">Malik Pierre-Davis, he/him</a></li>
           <li><a href="https://cclab-portolio-zhijun.glitch.me/">Zhijun Song, she/her</a></li>
           <li><a href="https://cclab-portfolio-jackiex.glitch.me/">Jackie Xia, she/her</a></li>
-          <li><a href="https://cclab-portfolio-jxu.glitch.me/">Junru(Angelina) Xu, she/her</a></li>
+          <li><a href="https://cc-portfolio-jxu.glitch.me/">Junru(Angelina) Xu, she/her</a></li>
           <li><a href="https://asfan-cclab-portfolio.glitch.me/">Angel Fan, she/her</a></li>
           <li><a href="https://cclab-portfolio-ziweiji.glitch.me/">Z Ji, she/her</a></li>
           <li><a href="https://cclab-portfolio-ori.glitch.me/">Ori Aum, he/him</a></li>
@@ -104,7 +104,7 @@
           <li><a href="https://cc-lab-portfolio-ardak.glitch.me">Ardak Mukanova, she/her</a></li>
           <li><a href="https://cc-lab-portfolio-cecile-roca.glitch.me">Cecile Roca Morla, she/her</a></li>
           <li><a href="https://cclab-pofolio-emilio.glitch.me">Emilio Lari, he/him</a></li>
-          <li><a href="https://gretchen-hollis-cclab.glitch.me">Gretchen Steinbrunner, she/her</a></li>
+          <li><a href="https://gretchenhollis-portfolio.glitch.me/">Gretchen Steinbrunner, she/her</a></li>
           <li><a href="https://cclab-portfolio-ina.glitch.me">Ina Kang, she/her</a></li>
           <li><a href="https://cclab-portfolio-iz.glitch.me">Iz Nettere, they/them</a></li>
           <li><a href="https://cclab-portfolio-jbrill.glitch.me">Jason Brill, he/him</a></li>
@@ -116,9 +116,9 @@
           <li><a href="https://cc-lab-portflio-sn.glitch.me">Sarah Nichols, she/her</a></li>
           <li><a href="https://cc-unnati.glitch.me">Unnati Shukla, she/her</a></li>
           <li><a href="https://cclab-portfolio-wesley.glitch.me/">Wesley Chau, he/him</a></li>
-          <li><a href="https://cclab-portfolio-wesley.glitch.me/">Xintong Wang, she/her</a></li>
+          <li><a href="https://cclab-portfolio-xintong.glitch.me/">Xintong Wang, she/her</a></li>
           <li><a href="https://cclabzhangyuan.glitch.me/">Yuan (Zane) Zhang, he/him</a></li>
-          <li><a href=""></a>Tania Zaidi</li>
+          <li><a href="https://cclab-portfolio-tania.glitch.me/">Tania Zaidi</a></li>
         </ul>
 
         <div class="block" id="section3">
@@ -140,9 +140,9 @@
           <li><a href="https://cclab-portfolio-alienq88.glitch.me/">Wenwen(Erin) Qiu, she/her</a></li>
           <li><a href="https://cc-portfolio-nishra.glitch.me/">Nishra Ranpura, she/her</a></li>
           <li><a href="https://cclab-sarita.glitch.me/">Yingying(Sarita) Sun, she/her</a></li>
-          <li><a href="addPortfolioLink">Qiao(Kyle) Xiao, she/her</a></li>
-          <li><a href="http://cclab-portfolio-haoshu.glitch.me/p1.html">Haoshu Yang, he/him</a></li>
-          <li><a href="addPortfolioLink">Yao Xiao, she/her</a></li>
+          <li><a href="https://kyle-xiao-cc-lab.glitch.me">Qiao(Kyle) Xiao, she/her</a></li>
+          <li><a href="https://cclab-portfolio-haoshu.glitch.me/">Haoshu Yang, he/him</a></li>
+          <li><a href="https://cclab-portfolio-yao.glitch.me/">Yao Xiao, she/her</a></li>
           
         </ul>
 
