--- a/resource/library.html
+++ b/resource/library.html
@@ -483,7 +483,7 @@
               <td>
                 <ul>
                   <li>
-                    <a href="" target="_blank">Data Feminism</a>, Catherine
+                    Choose one chapter from <a href="https://data-feminism.mitpress.mit.edu/" target="_blank">Data Feminism</a> to read, Catherine
                     D'lgnazio and Lauren F. Klein
                   </li>
                 </ul>
