--- a/splashscreen.html
+++ b/splashscreen.html
@@ -21,11 +21,9 @@
   <body>
     <div class="blackBox" style="padding: 500px">
       <div class="splash">
-        
+        Critical Computation
         <br><br>
-        Critical Computation: <br /><br />
-        Consentful Interface
-        
+        Networked Choreagraphy
       </div>
     </div>
   </body>
